[package]
name = "stm32f4_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "*"
cortex-m-rt = "*"
ssd1306 = "0.4"
nb = "1.0"
panic-halt = "0.2.0"
l3gd20 = "0.2.0"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.3"

[dependencies.stm32f4xx-hal]
default-features = false
features = ["rt", "stm32f429", "ltdc" ]
version = "0.17.0"

[profile.dev]
debug = true

[profile.release]
debug = true
lto = true
opt-level = "s"
