[package]
name = "stm32f4_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "*"
cortex-m-rt = "*"
ili9341 = { version = "*", path = "ili9341-rs" }
display-interface = "0.4.0"
display-interface-spi = "0.4.0"
embedded-graphics = "0.8.0"
panic-halt = "0.2.0"
embedded-hal = "0.2.0"

[dependencies.stm32f4xx-hal]
default-features = false
features = ["rt", "stm32f429"]
version = "0.17.0"

[profile.dev]
debug = true

[profile.release]
lto = true
opt-level = "s"
